# adapter/orianna/cmd/restful/v1/stocks/api.go
@@ -1,15 +1,20 @@
 package stocks
 
 import (
+	"github.com/blackhorseya/monorepo-go/entity/domain/market/biz"
 	"github.com/gin-gonic/gin"
 )
 
 type impl struct {
+	svc biz.IMarketBiz
 }
 
 // Handle is the handler for the RESTful API.
-func Handle(g *gin.RouterGroup) {
-	instance := &impl{}
+func Handle(g *gin.RouterGroup, svc biz.IMarketBiz) {
+	instance := &impl{
+		svc: svc,
+	}
 
-	g.GET("/", instance.GetList)
+	g.GET("/:symbol", instance.GetStockBySymbol)
+	g.GET("", instance.GetList)
 }
